2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Account.cs: Removed code that added the contact into the
	  Person, it's not needed now because the ProviderUser will handle
	  this
	* Banter/Person.cs: Removed references to TapiocaContact (most of them)
	* Banter/PersonCard.cs: Removed references to TapiocaContact

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/ProviderUser.cs: changed Jabber string to jabber for telepathy
	  compliance

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: changes to set the tapioca contact in the provider
	  user object
	* Banter/ProviderUser.cs: added internal Contact property; setup events
	  for presence and alias changing

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Application.cs: Added the PersonSync in startup and shutdown
	  of the application
	* Banter/PersonSync.cs: Stubbed out the Start Stop methods to place it
	  in Application

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/Makefile.am: Added PersonSync.cs to project
	* Banter/PersonSync.cs: Created the person sync class.  This class will
	  be in charge of the sync between Telepathy and EDS.

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: refactor code to match the changes in
	  ProviderUserManager

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Added ProviderUsers to Person and code to update
	  them based on EDS properties

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: updated the provider user list when finished
	  connecting
	* Banter/ProviderUser.cs: added a setter on Presence

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Added the CreateProviderUser method to
	  create and add a user in one operation

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Changed Set to AddProviderUser and